// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db add aircraft tests add aircraft and update aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane",
  "documents": [],
  "equipment": "test",
  "fuelTypes": [
    "AVGAS",
  ],
  "hourlyRateEur": 100,
  "imageUrl": null,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceTach": 100,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 150,
    "nextMaintenanceType": "50h",
    "reservedHours": 2,
    "totalPercentageHours": 5,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "seats": 2,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 100,
  "yearOfManufacture": 2000,
}
`;

exports[`Db add aircraft tests add aircraft and update aircraft 2`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane 2",
  "documents": [],
  "equipment": "test",
  "fuelTypes": [
    "AVGAS",
  ],
  "hourlyRateEur": 100,
  "imageUrl": null,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceTach": 100,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 150,
    "nextMaintenanceType": "50h",
    "reservedHours": 2,
    "totalPercentageHours": 5,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "seats": 2,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 100,
  "yearOfManufacture": 2000,
}
`;

exports[`Db query Get aircrafts tests getAllAircraft returns all active aircraft in the db 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hourlyRateEur": 216,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "reservedHours": 8,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hourlyRateEur": 147,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "reservedHours": 3,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
]
`;

exports[`Db query Get aircrafts tests getAllAircraft returns all aircraft in the db 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hourlyRateEur": 216,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "reservedHours": 8,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hourlyRateEur": 147,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "reservedHours": 3,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
  {
    "active": false,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Piper PA-28",
    "documents": [],
    "equipment": "SFD",
    "fuelTypes": [
      "AVGAS",
    ],
    "hourlyRateEur": 228,
    "imageUrl": "https://cdn.jetphotos.com/full/6/927368_1715977239.jpg",
    "location": "EFNU",
    "maintenance": {
      "lastMaintenanceDate": "2024-04-15",
      "lastMaintenanceTach": 5180,
      "lastMaintenanceType": "50h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": "2025-05-05",
      "nextMaintenanceTach": 5230,
      "nextMaintenanceType": "50h",
      "reservedHours": 2,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Piper Aircraft",
    "model": "PA-28",
    "notes": [
      {
        "severity": "warning",
        "text": "Waiting for annual",
      },
    ],
    "registration": "OH-P28",
    "seats": 4,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 182,
    "yearOfManufacture": 2005,
  },
]
`;

exports[`Db query Get aircrafts tests getAllAircraftByRegistration returns the active aircraft in the db 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Diamond DA40",
  "documents": [],
  "equipment": "SDFGY/S",
  "fuelTypes": [
    "JETA-1",
  ],
  "hourlyRateEur": 216,
  "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
  "location": "EFNU BF-hangar 21",
  "maintenance": {
    "lastMaintenanceDate": "2024-11-10",
    "lastMaintenanceTach": 4709,
    "lastMaintenanceType": "200h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 4778,
    "nextMaintenanceType": "100h",
    "reservedHours": 8,
    "totalPercentageHours": 10,
  },
  "manufacturer": "Diamond Aircraft",
  "model": "DA40",
  "notes": [
    {
      "severity": "note",
      "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
    },
  ],
  "registration": "OH-STL",
  "seats": 4,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 148,
  "yearOfManufacture": 2007,
}
`;
